Login Functonallity added + Change of layout

--- a/voting_system/templates/Login.html
+++ b/voting_system/templates/Login.html
@@ -22,7 +22,7 @@
     <form id="login_form">
         <div class="ms-TextField">
             <label class="ms-Label">Student ID</label>
-            <input class="ms-TextField-field" type="text" name="studentid" value="" placeholder="">
+            <input class="ms-TextField-field" type="text" name="student_id" value="" placeholder="">
         </div>
         <div class="ms-TextField">
             <label class="ms-Label">Password</label>
