--- a/voting_system/templates/welcomePage.html
+++ b/voting_system/templates/welcomePage.html
@@ -17,7 +17,7 @@
     <h1>Welcome </h1>
     <h1> To </h1>
     <h1> VOTING </h1>
-    <a href="https://developer.microsoft.com/en-us/fabric-js/components/button/button">
+    <a href="/login">
         <button id="login" class="ms-Button">
             <span class="ms-Button-label">Login To Vote</span>
         </button>
