--- a/voting_system/templates/selection.html
+++ b/voting_system/templates/selection.html
@@ -14,222 +14,50 @@
 </head>
 
 <body>
-    <div class="ms-PersonaCard">
-  <div class="ms-PersonaCard-persona">
-    <div class="ms-Persona ms-Persona--lg">
-      <div class="ms-Persona-imageArea">
-        <div class="ms-Persona-initials ms-Persona-initials--blue">AL</div>
-        <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-      </div>
-      <div class="ms-Persona-presence">
-        <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-      </div>
-      <div class="ms-Persona-details">
-        <div class="ms-Persona-primaryText">Alton Lafferty</div>
-        <div class="ms-Persona-secondaryText">Accountant</div>
-        <div class="ms-Persona-tertiaryText">In a meeting</div>
-        <div class="ms-Persona-optionalText">Available at 4:00pm</div>
-      </div>
-    </div>
-  </div>
-  <ul class="ms-PersonaCard-actions">
-    <li data-action-id="chat" class="ms-PersonaCard-action" tabindex="1">
-      <i class="ms-Icon ms-Icon--Chat"></i>
-    </li>
-    <li data-action-id="phone" class="ms-PersonaCard-action is-active" tabindex="2">
-      <i class="ms-Icon ms-Icon--Phone"></i>
-    </li>
-    <li data-action-id="video" class="ms-PersonaCard-action" tabindex="3">
-      <i class="ms-Icon ms-Icon--Video"></i>
-    </li>
-    <li data-action-id="mail" class="ms-PersonaCard-action" tabindex="4">
-      <i class="ms-Icon ms-Icon--Mail"></i>
-    </li>
-    <li class="ms-PersonaCard-overflow" alt="View profile in Delve" title="View profile in Delve">View profile</li>
-    <li data-action-id="org" class="ms-PersonaCard-action ms-PersonaCard-orgChart" tabindex="5">
-      <i class="ms-Icon ms-Icon--Org"></i>
-    </li>
-  </ul>
-  <div class="ms-PersonaCard-actionDetailBox">
-    <div data-detail-id="mail" class="ms-PersonaCard-details">
-      <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Personal:</span> 
-        <a class="ms-Link" href="mailto:alton.lafferty@outlook.com">alton.lafferty@outlook.com</a> 
-      </div>
-      <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Work:</span> 
-        <a class="ms-Link" href="mailto:alton.lafferty@outlook.com">altonlafferty@contoso.com</a> 
-      </div>
-    </div>
-    <div data-detail-id="chat" class="ms-PersonaCard-details">
-      <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Lync:</span> 
-        <a class="ms-Link" href="#">Start Lync call</a> 
-      </div>
-    </div>
-    <div data-detail-id="phone" class="ms-PersonaCard-details">
-      <div class="ms-PersonaCard-detailExpander"></div>
-      <div class="ms-PersonaCard-detailLine">
-        <span class="ms-PersonaCard-detailLabel">Details</span> 
-      </div>
-      <div class="ms-PersonaCard-detailLine">
-        <span class="ms-PersonaCard-detailLabel">Personal:</span>  555.206.2443
-      </div>
-      <div class="ms-PersonaCard-detailLine">
-        <span class="ms-PersonaCard-detailLabel">Work:</span>  555.929.8240
-      </div>
-    </div>
-    <div data-detail-id="video" class="ms-PersonaCard-details">
-      <div class="ms-PersonaCard-detailLine"><span class="ms-PersonaCard-detailLabel">Skype:</span> 
-        <a class="ms-Link" href="#">Start Skype call</a> 
-      </div>
-    </div>
-    <div data-detail-id="org" class="ms-PersonaCard-details">
-      <div class="ms-OrgChart">
-        <div class="ms-OrgChart-group">
-          <ul class="ms-OrgChart-list">
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Russel Miller</div>
-                    <div class="ms-Persona-secondaryText">Sales</div>
-                  </div>
+
+    <ul class="ms-List">
+        {% for candidate in  candidates%}
+        <li class="ms-ListItem ms-ListItem--image" tabindex="0">
+                <div class="ms-ListItem-image"></div>
+                <span class="ms-ListItem-primaryText">{{candidate.full_name}}</span>
+                <span class="ms-ListItem-secondaryText">{{candidate.position}}</span>
+                <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to
+                    d.</span>
+                <span class="ms-ListItem-metaText">2:42p</span>
+                <div class="ms-ListItem-selectionTarget"></div>
+                <div class="ms-ListItem-actions">
+                    <div class="ms-ListItem-action">
+                        <i class="ms-Icon ms-Icon--Mail"></i>
+                    </div>
+                    <div class="ms-Dropdown" tabindex="0">
+                            <label class="ms-Label">Please rank</label>
+                            <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
+                            <select class="ms-Dropdown-select">
+                              <option>Choose a rank;</option>
+                              <option>1</option>
+                              <option>2</option>
+                              <option>3</option>
+                              <option>4</option>
+                            </select>
+                          </div>
                 </div>
-              </button>
             </li>
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Douglas Fielder</div>
-                    <div class="ms-Persona-secondaryText">Public Relations</div>
-                  </div>
-                </div>
-              </button>
-            </li>
-          </ul>
-        </div>
-        <div class="ms-OrgChart-group">
-          <div class="ms-OrgChart-groupTitle">Manager</div>
-          <ul class="ms-OrgChart-list">
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Grant Steel</div>
-                    <div class="ms-Persona-secondaryText">Sales</div>
-                  </div>
-                </div>
-              </button>
-            </li>
-          </ul>
-        </div>
-        <div class="ms-OrgChart-group">
-          <div class="ms-OrgChart-groupTitle">Staff</div>
-          <ul class="ms-OrgChart-list">
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Harvey Wallin</div>
-                    <div class="ms-Persona-secondaryText">Public Relations</div>
-                  </div>
-                </div>
-              </button>
-            </li>
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Marcus Lauer</div>
-                    <div class="ms-Persona-secondaryText">Technical Support</div>
-                  </div>
-                </div>
-              </button>
-            </li>
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Marcel Groce</div>
-                    <div class="ms-Persona-secondaryText">Delivery</div>
-                  </div>
-                </div>
-              </button>
-            </li>
-            <li class="ms-OrgChart-listItem">
-              <button class="ms-OrgChart-listItemBtn" tabindex="1">
-                <div class="ms-Persona">
-                  <div class="ms-Persona-imageArea">
-                    <div class="ms-Persona-initials ms-Persona-initials--blue">RM</div>
-                    <img class="ms-Persona-image" src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/images/persona.person.png">
-                  </div>
-                  <div class="ms-Persona-presence">
-                    <i class="ms-Persona-presenceIcon ms-Icon ms-Icon--SkypeCheck"></i>
-                  </div>
-                  <div class="ms-Persona-details">
-                    <div class="ms-Persona-primaryText">Jessica Fischer</div>
-                    <div class="ms-Persona-secondaryText">Marketing</div>
-                  </div>
-                </div>
-              </button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+            
+        {% endfor %}
+        
+    </ul>
+
+
 </body>
 <script type="text/javascript">
-    var TextFieldElements = document.querySelectorAll(".ms-TextField");
-    for (var i = 0; i < TextFieldElements.length; i++) {
-        new fabric['TextField'](TextFieldElements[i]);
-    }
-    var PersonaCardElement = document.querySelectorAll(".ms-PersonaCard");
-  for (var i = 0; i < PersonaCardElement.length; i++) {
-    new fabric.PersonaCard(PersonaCardElement[i]);
+var DropdownHTMLElements = document.querySelectorAll('.ms-Dropdown');
+  for (var i = 0; i < DropdownHTMLElements.length; ++i) {
+    var Dropdown = new fabric['Dropdown'](DropdownHTMLElements[i]);
   }
+    var ListItemElements = document.querySelectorAll(".ms-ListItem");
+    for (var i = 0; i < ListItemElements.length; i++) {
+        new fabric['ListItem'](ListItemElements[i]);
+    }
 </script>
 
 </html>
