Fixed gsu officer view + added 16 faculty officer limit to data generation + few bug fixes

--- a/voting_system/templates/Login.html
+++ b/voting_system/templates/Login.html
@@ -8,26 +8,7 @@
     <title>Login Now</title>
     <link rel="stylesheet"
         href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.min.css">
-    <link rel="stylesheet"
-        href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.components.min.css">
-    <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/js/fabric.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-
-
-</head>
-
-<body>
-    <h1>Login</h1>
-    <form id="login_form">
-        <div class="ms-TextField">
-            <label class="ms-Label">Student ID</label>
-            <input class="ms-TextField-field" type="text" name="student_id" value="" placeholder="">
-        </div>
-        <div class="ms-TextField">
-            <label class="ms-Label">Password</label>
-            <input class="ms-TextField-field" type="password" name="password" value="" placeholder="">
-        </div>
+ 6       </div>
         <button id="login" class="ms-Button" type="submit">
             <span class="ms-Button-label">Login</span>
         </button>
@@ -36,6 +17,7 @@
 
 </body>
 <script type="text/javascript">
+    // Microsoft Design Stuff
     var TextFieldElements = document.querySelectorAll(".ms-TextField");
     for (var i = 0; i < TextFieldElements.length; i++) {
         new fabric['TextField'](TextFieldElements[i]);
@@ -50,10 +32,10 @@
                 type: "POST",
                 data: $('#login_form').serialize(), // this will get form fields
                 success: function (res) {
-                    alert(res);
+                    window.location.href = "/selection/president";
                 },
-                error : function(error) {
-                    alert(error)
+                error : functpion( jqXHR, textStatus,  errorThrown ) {
+                    alert(jqXHR.responseText)
                 }
             });
 
