--- a/voting_system/templates/selection.html
+++ b/voting_system/templates/selection.html
@@ -23,17 +23,15 @@
                 <span class="ms-ListItem-secondaryText">{{candidate.position}}</span>
                 <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to
                     d.</span>
-                <span class="ms-ListItem-metaText">2:42p</span>
                 <div class="ms-ListItem-selectionTarget"></div>
                 <div class="ms-ListItem-actions">
-                    <div class="ms-ListItem-action">
+                    <!-- <div class="ms-ListItem-action">
                         <i class="ms-Icon ms-Icon--Mail"></i>
-                    </div>
-                    <div class="ms-Dropdown" tabindex="0">
-                            <label class="ms-Label">Please rank</label>
+                    </div> -->
+                    <div class="ms-Dropdown " >
                             <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
                             <select class="ms-Dropdown-select">
-                              <option>Choose a rank;</option>
+                              <option>Choose a rank</option>
                               <option>1</option>
                               <option>2</option>
                               <option>3</option>
