--- a/voting_system/templates/Login.html
+++ b/voting_system/templates/Login.html
@@ -8,7 +8,27 @@
     <title>Login Now</title>
     <link rel="stylesheet"
         href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.min.css">
- 6       </div>
+    <link rel="stylesheet"
+        href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.components.min.css">
+    <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/js/fabric.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+
+
+</head>
+
+<body>
+    <h1>Login</h1>
+    <form id="login_form">
+        <div class="ms-TextField">
+            <label class="ms-Label">Student ID</label>
+            <input class="ms-TextField-field" type="text" name="student_id" value="" placeholder="">
+        </div>
+        <div class="ms-TextField">
+            <label class="ms-Label">Password</label>
+            <input class="ms-TextField-field" type="password" name="password" value="" placeholder="">
+        </div>
+   </div>
         <button id="login" class="ms-Button" type="submit">
             <span class="ms-Button-label">Login</span>
         </button>
@@ -32,10 +52,11 @@
                 type: "POST",
                 data: $('#login_form').serialize(), // this will get form fields
                 success: function (res) {
+                    alert(res);
                     window.location.href = "/selection/president";
                 },
-                error : functpion( jqXHR, textStatus,  errorThrown ) {
-                    alert(jqXHR.responseText)
+                error : function(error) {
+                    alert(error)
                 }
             });
 
