--- a/voting_system/templates/selection.html
+++ b/voting_system/templates/selection.html
@@ -16,46 +16,84 @@
 <body>
 
     <ul class="ms-List">
-        {% for candidate in  candidates%}
-        <li class="ms-ListItem ms-ListItem--image" tabindex="0">
-                <div class="ms-ListItem-image"></div>
-                <span class="ms-ListItem-primaryText">{{candidate.full_name}}</span>
-                <span class="ms-ListItem-secondaryText">{{candidate.position}}</span>
-                <span class="ms-ListItem-tertiaryText">Today we discussed the importance of a, b, and c in regards to
-                    d.</span>
-                <div class="ms-ListItem-selectionTarget"></div>
-                <div class="ms-ListItem-actions">
-                    <!-- <div class="ms-ListItem-action">
-                        <i class="ms-Icon ms-Icon--Mail"></i>
-                    </div> -->
-                    <div class="ms-Dropdown " >
-                            <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
-                            <select class="ms-Dropdown-select">
-                              <option>Choose a rank</option>
-                              <option>1</option>
-                              <option>2</option>
-                              <option>3</option>
-                              <option>4</option>
-                            </select>
-                          </div>
+        {% for type in  candidates.keys()%}
+        <h2 id="Variants">{{type}}</h2>
+        {% for candidate in candidates[type] %}
+        <li class="ms-ListItem ms-ListItem--image" id="candidateCard" tabindex="0">
+            <div class="ms-ListItem-image"></div>
+            <span class="ms-ListItem-primaryText">{{candidate.full_name}}</span>
+            <span class="ms-ListItem-secondaryText">{{candidate.position}}</span>
+            <span class="ms-ListItem-tertiaryText">{{candidate.campaign_promises}}</span>
+            <div class="ms-ListItem-selectionTarget"></div>
+            <div class="ms-ListItem-actions">
+                <!-- <div class="ms-ListItem-action">
+                                <i class="ms-Icon ms-Icon--Mail"></i>
+                            </div> -->
+                <div class="ms-Dropdown ">
+                    <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
+                    <select class="ms-Dropdown-select">
+                        <option>Choose a rank</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                    </select>
                 </div>
-            </li>
-            
+            </div>
+        </li>
         {% endfor %}
-        
-    </ul>
+        {% endfor %}
 
+    </ul>
+    <a href="/">
+        <button id="login" class="ms-Button">
+            <span class="ms-Button-label">Next Page</span>
+        </button>
+    </a>
 
 </body>
 <script type="text/javascript">
-var DropdownHTMLElements = document.querySelectorAll('.ms-Dropdown');
-  for (var i = 0; i < DropdownHTMLElements.length; ++i) {
-    var Dropdown = new fabric['Dropdown'](DropdownHTMLElements[i]);
-  }
+    var DropdownHTMLElements = document.querySelectorAll('.ms-Dropdown');
+    for (var i = 0; i < DropdownHTMLElements.length; ++i) {
+        var Dropdown = new fabric['Dropdown'](DropdownHTMLElements[i]);
+    }
     var ListItemElements = document.querySelectorAll(".ms-ListItem");
     for (var i = 0; i < ListItemElements.length; i++) {
         new fabric['ListItem'](ListItemElements[i]);
     }
+
+    document.rea
+
+
+    {
+        studentID : 
+        {
+            faculty : {slection}, 
+            gsu_officers : {
+                gsu1 : {
+
+                }, 
+                gsu2 : {
+                    
+                },
+                gsu3 : {
+                    
+                }
+            }, 
+            precident : {Selections}
+
+        }
+
+    }
+
+    {namecadidate 
+        {
+            1st pref : 0, 
+            send pref : count 
+
+
+
+    }}
 </script>
 
 </html>
