--- a/voting_system/templates/selection.html
+++ b/voting_system/templates/selection.html
@@ -64,6 +64,13 @@
 
     document.rea
 
+    var goloba_strograge_for_vote_selection = {}
+    
+goloba_strograge_for_vote_selection['strudentid']['position']
+selection = {
+    candidatename = 1, 
+    candidatename2 = 3
+}
 
     {
         studentID : 
