--- a/voting_system/templates/selection.html
+++ b/voting_system/templates/selection.html
@@ -7,33 +7,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login Now</title>
     <link rel="stylesheet"
-        href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.min.css">
+          href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.min.css">
     <link rel="stylesheet"
-        href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.components.min.css">
+          href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/css/fabric.components.min.css">
     <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/js/fabric.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
-    <ul class="ms-List">
-        {% for type in  candidates.keys()%}
-        <h2 id="Variants">{{type}}</h2>
-        {% for candidate in candidates[type] %}
-        <li class="ms-ListItem ms-ListItem--image" id="candidateCard" tabindex="0">
-            <div class="ms-ListItem-image"></div>
-            <span class="ms-ListItem-primaryText">{{candidate.full_name}}</span>
-            <span class="ms-ListItem-secondaryText">{{candidate.position}}</span>
-            <span class="ms-ListItem-tertiaryText">{{candidate.campaign_promises}}</span>
-            <div class="ms-ListItem-selectionTarget"></div>
-            <div class="ms-ListItem-actions">
-                <!-- <div class="ms-ListItem-action">
-                                <i class="ms-Icon ms-Icon--Mail"></i>
-                            </div> -->
-                <div class="ms-Dropdown ">
-                    <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
-                    <select class="ms-Dropdown-select">
-                        <option>Choose a rank</option>
-                        <option>1</option>
+<ul class="ms-List">
+    {% for type in candidates.keys()%}
+    <h1 id="Variants">{{type}}</h1>
+    {% for group in candidates[type].keys()%}
+    <h2 id="Variants">{{group}}</h2>
+    {% for candidate in candidates[type][group]%}
+    <li class="ms-ListItem ms-ListItem--image" id="candidateCard" tabindex="0">
+        <div class="ms-ListItem-image"></div>
+        <span class="ms-ListItem-primaryText" id="fullname">{{candidate.full_name}}</span>
+        <span class="ms-ListItem-secondaryText" id="position">{{candidate.position}}</span>
+        <span class="ms-ListItem-tertiaryText" id="campaign_promises">{{candidate.campaign_promises}}</span>
+        <div class="ms-ListItem-selectionTarget"></div>
+        <div class="ms-ListItem-actions">
+            <!-- <div class="ms-ListItem-action">
+                            <i class="ms-Icon ms-Icon--Mail"></i>
+                        </div> -->
+            <div class="ms-Dropdown ">
+                <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
+                <select class="ms-Dropdown-select">
+                    <option>Choose a rank</option>
+                    <option>1</option>
                         <option>2</option>
                         <option>3</option>
                         <option>4</option>
@@ -41,10 +46,11 @@
                 </div>
             </div>
         </li>
-        {% endfor %}
-        {% endfor %}
+    {% endfor %}
+    {% endfor %}
+    {% endfor %}
 
-    </ul>
+</ul>
     <a href="/">
         <button id="login" class="ms-Button">
             <span class="ms-Button-label">Next Page</span>
@@ -62,45 +68,40 @@
         new fabric['ListItem'](ListItemElements[i]);
     }
 
-    document.rea
 
-    var goloba_strograge_for_vote_selection = {}
-    
-goloba_strograge_for_vote_selection['strudentid']['position']
-selection = {
-    candidatename = 1, 
-    candidatename2 = 3
-}
+//run this after doc is loaded
+    $(document).ready(function () {
 
-    {
-        studentID : 
-        {
-            faculty : {slection}, 
-            gsu_officers : {
-                gsu1 : {
 
-                }, 
-                gsu2 : {
-                    
+        $("#login").click(function (e) {
+            e.preventDefault();
+
+            document.querySelectorAll("#candidateCard").forEach(el => {
+                console.log(el)
+
+                CandidateName = el.querySelector('#fullname').innerText
+                SelectionValue = el.querySelector('.ms-Dropdown').innerText
+                CandidatePosition= el.querySelector('#position').innerText
+            })
+
+            $.ajax({
+                url: 'login',
+                type: "POST",
+                data: $('#we').serialize(), // this will get form fields
+                success: function (res) {
+                    alert(res);
+                    window.location.href = "/selection/president";
                 },
-                gsu3 : {
-                    
+                error : function(error) {
+                    alert(error)
                 }
-            }, 
-            precident : {Selections}
+            });
 
-        }
-
-    }
-
-    {namecadidate 
-        {
-            1st pref : 0, 
-            send pref : count 
+        });
 
 
 
-    }}
+    });
 </script>
 
 </html>
