--- a/voting_system/templates/selection.html
+++ b/voting_system/templates/selection.html
@@ -22,23 +22,25 @@
     {% for type in candidates.keys()%}
     <h1 id="Variants">{{type}}</h1>
     {% for group in candidates[type].keys()%}
-    <h2 id="Variants">{{group}}</h2>
-    {% for candidate in candidates[type][group]%}
-    <li class="ms-ListItem ms-ListItem--image" id="candidateCard" tabindex="0">
-        <div class="ms-ListItem-image"></div>
-        <span class="ms-ListItem-primaryText" id="fullname">{{candidate.full_name}}</span>
-        <span class="ms-ListItem-secondaryText" id="position">{{candidate.position}}</span>
-        <span class="ms-ListItem-tertiaryText" id="campaign_promises">{{candidate.campaign_promises}}</span>
-        <div class="ms-ListItem-selectionTarget"></div>
-        <div class="ms-ListItem-actions">
-            <!-- <div class="ms-ListItem-action">
-                            <i class="ms-Icon ms-Icon--Mail"></i>
-                        </div> -->
-            <div class="ms-Dropdown ">
-                <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
-                <select class="ms-Dropdown-select">
-                    <option>Choose a rank</option>
-                    <option>1</option>
+    <div id="candidateCards">
+
+        <h2 id="candidateGroupName">{{group}}</h2>
+        {% for candidate in candidates[type][group]%}
+        <li class="ms-ListItem ms-ListItem--image" id="candidateCard" tabindex="0">
+            <div class="ms-ListItem-image"></div>
+            <span class="ms-ListItem-primaryText" id="fullname">{{candidate.full_name}}</span>
+            <span class="ms-ListItem-secondaryText" id="position">{{candidate.position}}</span>
+            <span class="ms-ListItem-tertiaryText" id="campaign_promises">{{candidate.campaign_promises}}</span>
+            <div class="ms-ListItem-selectionTarget"></div>
+            <div class="ms-ListItem-actions">
+                <!-- <div class="ms-ListItem-action">
+                                <i class="ms-Icon ms-Icon--Mail"></i>
+                            </div> -->
+                <div class="ms-Dropdown ">
+                    <i class="ms-Dropdown-caretDown ms-Icon ms-Icon--ChevronDown"></i>
+                    <select class="ms-Dropdown-select">
+                        <option>Choose a rank</option>
+                        <option>1</option>
                         <option>2</option>
                         <option>3</option>
                         <option>4</option>
@@ -46,13 +48,14 @@
                 </div>
             </div>
         </li>
-    {% endfor %}
+        {% endfor %}
+    </div>
     {% endfor %}
     {% endfor %}
 
 </ul>
     <a href="/">
-        <button id="login" class="ms-Button">
+        <button id="submit" class="ms-Button">
             <span class="ms-Button-label">Next Page</span>
         </button>
     </a>
@@ -72,25 +75,33 @@
 //run this after doc is loaded
     $(document).ready(function () {
 
+        var card_selection_data = {};
 
-        $("#login").click(function (e) {
+        $("#submit").click(function (e) {
             e.preventDefault();
-
-            document.querySelectorAll("#candidateCard").forEach(el => {
-                console.log(el)
-
-                CandidateName = el.querySelector('#fullname').innerText
-                SelectionValue = el.querySelector('.ms-Dropdown').innerText
-                CandidatePosition= el.querySelector('#position').innerText
+            document.querySelectorAll("#candidateCards").forEach(el =>{
+                
+                card_selection_data[$(el).children()[0].innerText] = (function () { 
+                    var all_children = $(el).children().slice(1,$(el).children().length)
+                    var all_selction = {};
+                    jQuery.each( all_children, function( idx, el ) {
+                        CardInfo = {};
+                        //CandidatePosition= el.querySelector('#position').innerText
+                        
+                        all_selction[el.querySelector('#fullname').innerText] = el.querySelector('.ms-Dropdown').innerText
+                    })
+                    return all_selction;
+                 })()
             })
+            
 
             $.ajax({
-                url: 'login',
+                url: '/selection/{{endpoint}}',
                 type: "POST",
-                data: $('#we').serialize(), // this will get form fields
+                contentType : "application/json",
+                data: JSON.stringify(card_selection_data), // this will get form fields
                 success: function (res) {
                     alert(res);
-                    window.location.href = "/selection/president";
                 },
                 error : function(error) {
                     alert(error)
